--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>single-page-developer-portfolio</title>
 </head>
-<body>
+<body style="background-color: darkgray;">
     <header>
         <h2>adamkeyes</h2>
 
-        <ul class="contacts">
+        <ul class="redes-sociais">
             <li>
-                <a><img src="" alt=""></a>
+                <a href=""><img src="./src/img/icon-github.svg" alt=""></a>
             </li>
             <li>
-                <a><img src="" alt=""></a>
+                <a href=""><img src="./src/img/icon-frontend-mentor.svg" alt=""></a>
             </li>
             <li>
-                <a><img src="" alt=""></a>
+                <a href=""><img src="./src/img/icon-linkedin.svg" alt=""></a>
             </li>
             <li>
-                <a><img src="" alt=""></a>
+                <a href=""><img src="./src/img/icon-twitter.svg" alt=""></a>
             </li>
         </ul>
     </header>
