Linquei favicon e reset. E marquei classes.

--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/styles/reset.css">
     <title>single-page-developer-portfolio</title>
+    <link rel="shortcut icon" href="./src/favicon/favicon-32x32.png" type="image/x-icon">
 </head>
-<body style="background-color: darkgray;">
+<body>
     <header>
         <h2>adamkeyes</h2>
 
-        <ul class="redes-sociais">
-            <li>
-                <a href=""><img src="./src/img/icon-github.svg" alt=""></a>
+        <ul class="social-media">
+            <li class="social-media">
+                <a href="./"><img src="./src/img/icon-github.svg" alt="link GitHub"></a>
             </li>
-            <li>
-                <a href=""><img src="./src/img/icon-frontend-mentor.svg" alt=""></a>
+            <li class="social-media">
+                <a href="./"><img src="./src/img/icon-frontend-mentor.svg" alt="Link Frontend Mento"></a>
             </li>
-            <li>
-                <a href=""><img src="./src/img/icon-linkedin.svg" alt=""></a>
+            <li class="social-media">
+                <a href="./"><img src="./src/img/icon-linkedin.svg" alt="Link LinkedIn"></a>
             </li>
-            <li>
-                <a href=""><img src="./src/img/icon-twitter.svg" alt=""></a>
+            <li class="social-media">
+                <a href="./"><img src="./src/img/icon-twitter.svg" alt="Link Twitter"></a>
             </li>
         </ul>
     </header>
