Criei a div header-section. Add link styles.

--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <link rel="stylesheet" href="./src/styles/reset.css">
     <title>single-page-developer-portfolio</title>
     <link rel="shortcut icon" href="./src/favicon/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
 <body>
     <header>
-        <h2>adamkeyes</h2>
-
-        <ul class="social-media">
-            <li class="social-media">
-                <a href="./"><img src="./src/img/icon-github.svg" alt="link GitHub"></a>
-            </li>
-            <li class="social-media">
-                <a href="./"><img src="./src/img/icon-frontend-mentor.svg" alt="Link Frontend Mento"></a>
-            </li>
-            <li class="social-media">
-                <a href="./"><img src="./src/img/icon-linkedin.svg" alt="Link LinkedIn"></a>
-            </li>
-            <li class="social-media">
-                <a href="./"><img src="./src/img/icon-twitter.svg" alt="Link Twitter"></a>
-            </li>
-        </ul>
+        <div class="header-section">
+            <h2 class="developer-name">adamkeyes</h2>
+    
+            <ul class="social-media">
+                <li class="social-media">
+                    <a href="./"><img src="./src/img/icon-github.svg" alt="link GitHub"></a>
+                </li>
+                <li class="social-media">
+                    <a href="./"><img src="./src/img/icon-frontend-mentor.svg" alt="Link Frontend Mento"></a>
+                </li>
+                <li class="social-media">
+                    <a href="./"><img src="./src/img/icon-linkedin.svg" alt="Link LinkedIn"></a>
+                </li>
+                <li class="social-media">
+                    <a href="./"><img src="./src/img/icon-twitter.svg" alt="Link Twitter"></a>
+                </li>
+            </ul>
+        </div>
     </header>
 </body>
 </html>
