Add classes e linquei varialbes.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/reset.css">
     <title>single-page-developer-portfolio</title>
+    <link rel="stylesheet" href="./src/styles/variables.css">
     <link rel="shortcut icon" href="./src/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
@@ -14,16 +15,16 @@
             <h2 class="developer-name">adamkeyes</h2>
     
             <ul class="social-media">
-                <li class="social-media">
+                <li class="media">
                     <a href="./"><img src="./src/img/icon-github.svg" alt="link GitHub"></a>
                 </li>
-                <li class="social-media">
+                <li class="media">
                     <a href="./"><img src="./src/img/icon-frontend-mentor.svg" alt="Link Frontend Mento"></a>
                 </li>
-                <li class="social-media">
+                <li class="media">
                     <a href="./"><img src="./src/img/icon-linkedin.svg" alt="Link LinkedIn"></a>
                 </li>
-                <li class="social-media">
+                <li class="media">
                     <a href="./"><img src="./src/img/icon-twitter.svg" alt="Link Twitter"></a>
                 </li>
             </ul>
