--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/styles/variables.css">
     <link rel="shortcut icon" href="./src/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="./src/styles/responsive.css">
 </head>
 <body>
     <header>
