--- a/index.html
+++ b/index.html
@@ -31,5 +31,20 @@
             </ul>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div>
+                <h1>Nice to meet you! I’m <span>Adam Keyes.</span></h1>
+
+                <p>Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</p>
+
+                <a href="./" target="_blank" rel="">Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</a>
+            </div>
+
+            <picture>
+                <img src="" alt="">
+            </picture>
+        </section>
+    </main>
 </body>
 </html>
