--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <section class="hero">
             <div>
-                <h1 class="title">Nice to meet you! I’m <span>Adam Keyes.</span></h1>
+                <h1 class="title">Nice to meet you! <br> I’m <span>Adam Keyes.</span></h1>
 
                 <p class="hero-description">Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</p>
 
