Comentei a tag picture.

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 <a class="btn-hero" href="./" target="_blank">CONTACT ME</a>
             </div>
 
-            <picture class="image-profile">
+            <!-- <picture class="image-profile">
                 <source srcset="./src/img/image-profile-mobile.webp" media="(max-width: 375px)">
                 <source srcset="./src/img/image-profile-tablet.webp" media="(max-width: 768px)">
                 <img src="./src/img/image-profile-desktop.webp" alt="Imagem Desenvolverdo">
-            </picture>
+            </picture> -->
         </section>
     </main>
 </body>
