--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
                 <img src="./src/img/image-profile-desktop.webp" alt="Imagem Desenvolverdo">
             </picture>
         </section>
+
+        <section class="skills">
+            <div class="skill">
+                <h2 class="">HTML</h2>
+                <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+                <h2 class="">CSS</h2>
+                <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+                <h2 class="">Javascript</h2>
+                <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+                <h2 class="">Accessibility</h2>
+                <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+                <h2 class="">React</h2>
+                <p>3 Years Experience</p>
+            </div>
+            <div class="skill">
+                <h2 class="">Sass</h2>
+                <p>3 Years Experience</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
