Marquei uma div container-skills. Add tudo.

--- a/index.html
+++ b/index.html
@@ -49,29 +49,32 @@
         </section>
 
         <section class="skills">
-            <div class="skill">
-                <h2 class="">HTML</h2>
-                <p>4 Years Experience</p>
-            </div>
-            <div class="skill">
-                <h2 class="">CSS</h2>
-                <p>4 Years Experience</p>
-            </div>
-            <div class="skill">
-                <h2 class="">Javascript</h2>
-                <p>4 Years Experience</p>
-            </div>
-            <div class="skill">
-                <h2 class="">Accessibility</h2>
-                <p>4 Years Experience</p>
-            </div>
-            <div class="skill">
-                <h2 class="">React</h2>
-                <p>3 Years Experience</p>
-            </div>
-            <div class="skill">
-                <h2 class="">Sass</h2>
-                <p>3 Years Experience</p>
+
+            <div class="container-skills">
+                <div class="skill">
+                    <h2 class="skill-name">HTML</h2>
+                    <p class="skill-time">4 Years Experience</p>
+                </div>
+                <div class="skill">
+                    <h2 class="skill-name">CSS</h2>
+                    <p class="skill-time">4 Years Experience</p>
+                </div>
+                <div class="skill">
+                    <h2 class="skill-name">Javascript</h2>
+                    <p class="skill-time">4 Years Experience</p>
+                </div>
+                <div class="skill">
+                    <h2 class="skill-name">Accessibility</h2>
+                    <p class="skill-time">4 Years Experience</p>
+                </div>
+                <div class="skill">
+                    <h2 class="skill-name">React</h2>
+                    <p class="skill-time">3 Years Experience</p>
+                </div>
+                <div class="skill">
+                    <h2 class="skill-name">Sass</h2>
+                    <p class="skill-time">3 Years Experience</p>
+                </div>
             </div>
         </section>
     </main>
