Fiz a marcação do projects.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
                 </div>
             </div>
         </section>
+        <section class="projects">
+            <div class="container-projects">
+                <div class="content-projects">
+                    <h2>Projects</h2>
+                    
+                    <a href="./">CONTACT ME</a>
+                </div>
+
+                <ul class="cards-projects">
+                    <li>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <a href="">VIEW PROJECT</a>
+                        <a href="">VIEW CODE</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
