--- a/index.html
+++ b/index.html
@@ -82,16 +82,114 @@
                 <div class="content-projects">
                     <h2>Projects</h2>
                     
-                    <a href="./">CONTACT ME</a>
+                    <a class="btn-hero" href="./">CONTACT ME</a>
                 </div>
 
                 <ul class="cards-projects">
-                    <li>
-                        <img src="" alt="">
-                        <h3></h3>
-                        <p></p>
-                        <a href="">VIEW PROJECT</a>
-                        <a href="">VIEW CODE</a>
+                    <li class="card-project"></li>
+                        <div class="image-project">
+                            <picture>
+                                <source srcset="./src/img/thumbnail-project-1-small.webp" media="(max-width: 768px)">
+                                <img src="./src/img/thumbnail-project-1-large.webp" alt="DESIGN PORTFOLIO">
+                            </picture>
+                            <a href="./">VIEW PROJECT</a>
+                            <a href="./">VIEW CODE</a>
+
+                        </div>
+                        <h3 class="project-title">DESIGN PORTFOLIO</h3>
+                        <ul class="list-technologies">
+                            <li class="technologie">HTML</li>
+                            <li class="technologie">CSS</li>
+                        </ul>
+                    </li>
+
+                    <li class="card-project"></li>
+                        <div class="image-project">
+                            <picture>
+                                <source srcset="./src/img/thumbnail-project-2-small.webp" media="(max-width: 768px)">
+                                <img src="./src/img/thumbnail-project-2-large.webp" alt="E-LEARNING LANDING PAGE">
+                            </picture>
+                            <a href="./">VIEW PROJECT</a>
+                            <a href="./">VIEW CODE</a>
+
+                        </div>
+                        <h3 class="project-title">E-LEARNING LANDING PAGE</h3>
+                        <ul class="list-technologies">
+                            <li class="technologie">HTML</li>
+                            <li class="technologie">CSS</li>
+                        </ul>
+                    </li>
+
+                    <li class="card-project"></li>
+                        <div class="image-project">
+                            <picture>
+                                <source srcset="./src/img/thumbnail-project-3-small.webp" media="(max-width: 768px)">
+                                <img src="./src/img/thumbnail-project-3-large.webp" alt="TODO WEB APP">
+                            </picture>
+                            <a href="./">VIEW PROJECT</a>
+                            <a href="./">VIEW CODE</a>
+
+                        </div>
+                        <h3 class="project-title">TODO WEB APP</h3>
+                        <ul class="list-technologies">
+                            <li class="technologie">HTML</li>
+                            <li class="technologie">CSS</li>
+                            <li class="technologie">JAVASCRIPT</li>
+                        </ul>
+                    </li>
+
+                    <li class="card-project"></li>
+                        <div class="image-project">
+                            <picture>
+                                <source srcset="./src/img/thumbnail-project-4-small.webp" media="(max-width: 768px)">
+                                <img src="./src/img/thumbnail-project-4-large.webp" alt="ENTERTAINMENT WEB APP">
+                            </picture>
+                            <a href="./">VIEW PROJECT</a>
+                            <a href="./">VIEW CODE</a>
+
+                        </div>
+                        <h3 class="project-title">ENTERTAINMENT WEB APP</h3>
+                        <ul class="list-technologies">
+                            <li class="technologie">HTML</li>
+                            <li class="technologie">CSS</li>
+                            <li class="technologie">JAVASCRIPT</li>
+                        </ul>
+                    </li>
+
+                    <li class="card-project"></li>
+                        <div class="image-project">
+                            <picture>
+                                <source srcset="./src/img/thumbnail-project-5-small.webp" media="(max-width: 768px)">
+                                <img src="./src/img/thumbnail-project-5-large.webp" alt="MEMORY GAME">
+                            </picture>
+                            <a href="./">VIEW PROJECT</a>
+                            <a href="./">VIEW CODE</a>
+
+                        </div>
+                        <h3 class="project-title">MEMORY GAME</h3>
+                        <ul class="list-technologies">
+                            <li class="technologie">HTML</li>
+                            <li class="technologie">CSS</li>
+                            <li class="technologie">JAVASCRIPT</li>
+                        </ul>
+                    </li>
+
+                    <li class="card-project"></li>
+                        <div class="image-project">
+                            <picture>
+                                <source srcset="./src/img/thumbnail-project-6-small.webp" media="(max-width: 768px)">
+                                <img src="./src/img/thumbnail-project-6-large.webp" alt="ART GALLERY SHOWCASE">
+                            </picture>
+                            <a href="./">VIEW PROJECT</a>
+                            <a href="./">VIEW CODE</a>
+
+                        </div>
+                        <h3 class="project-title">ART GALLERY SHOWCASE</h3>
+                        <ul class="list-technologies">
+                            <li class="technologie">HTML</li>
+                            <li class="technologie">CSS</li>
+                            <li class="technologie">JAVASCRIPT</li>
+                        </ul>
                     </li>
                 </ul>
             </div>
