Corrigi o problema das LIs.

--- a/index.html
+++ b/index.html
@@ -82,18 +82,18 @@
                 <div class="content-projects">
                     <h2>Projects</h2>
                     
-                    <a class="btn-hero" href="./">CONTACT ME</a>
+                    <a class="btn-project" href="./">CONTACT ME</a>
                 </div>
 
-                <ul class="cards-projects">
-                    <li class="card-project"></li>
+                <ul class="list-projects">
+                    <li class="card-project">
                         <div class="image-project">
-                            <picture>
+                            <picture class="picture">
                                 <source srcset="./src/img/thumbnail-project-1-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-1-large.webp" alt="DESIGN PORTFOLIO">
                             </picture>
-                            <a href="./">VIEW PROJECT</a>
-                            <a href="./">VIEW CODE</a>
+                            <a class="teste1" href="./">VIEW PROJECT</a>
+                            <a class="teste2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">DESIGN PORTFOLIO</h3>
@@ -103,14 +103,14 @@
                         </ul>
                     </li>
 
-                    <li class="card-project"></li>
+                    <li class="card-project">
                         <div class="image-project">
-                            <picture>
+                            <picture class="picture">
                                 <source srcset="./src/img/thumbnail-project-2-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-2-large.webp" alt="E-LEARNING LANDING PAGE">
                             </picture>
-                            <a href="./">VIEW PROJECT</a>
-                            <a href="./">VIEW CODE</a>
+                            <a class="teste1" href="./">VIEW PROJECT</a>
+                            <a class="teste2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">E-LEARNING LANDING PAGE</h3>
@@ -120,7 +120,7 @@
                         </ul>
                     </li>
 
-                    <li class="card-project"></li>
+                    <!-- <li class="card-project"></li>
                         <div class="image-project">
                             <picture>
                                 <source srcset="./src/img/thumbnail-project-3-small.webp" media="(max-width: 768px)">
@@ -190,7 +190,7 @@
                             <li class="technologie">CSS</li>
                             <li class="technologie">JAVASCRIPT</li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </section>
