Criei uma classe teste.

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                                 <source srcset="./src/img/thumbnail-project-1-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-1-large.webp" alt="DESIGN PORTFOLIO">
                             </picture>
-                            <a class="teste1" href="./">VIEW PROJECT</a>
-                            <a class="teste2" href="./">VIEW CODE</a>
+                            <a class="teste" href="./">VIEW PROJECT</a>
+                            <a class="teste" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">DESIGN PORTFOLIO</h3>
@@ -109,8 +109,8 @@
                                 <source srcset="./src/img/thumbnail-project-2-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-2-large.webp" alt="E-LEARNING LANDING PAGE">
                             </picture>
-                            <a class="teste1" href="./">VIEW PROJECT</a>
-                            <a class="teste2" href="./">VIEW CODE</a>
+                            <a class="teste" href="./">VIEW PROJECT</a>
+                            <a class="teste" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">E-LEARNING LANDING PAGE</h3>
