--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                                 <source srcset="./src/img/thumbnail-project-1-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-1-large.webp" alt="DESIGN PORTFOLIO">
                             </picture>
-                            <a class="teste" href="./">VIEW PROJECT</a>
-                            <a class="teste" href="./">VIEW CODE</a>
+                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
+                            <a class="provisoriamente2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">DESIGN PORTFOLIO</h3>
@@ -109,8 +109,8 @@
                                 <source srcset="./src/img/thumbnail-project-2-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-2-large.webp" alt="E-LEARNING LANDING PAGE">
                             </picture>
-                            <a class="teste" href="./">VIEW PROJECT</a>
-                            <a class="teste" href="./">VIEW CODE</a>
+                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
+                            <a class="provisoriamente2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">E-LEARNING LANDING PAGE</h3>
@@ -120,14 +120,14 @@
                         </ul>
                     </li>
 
-                    <!-- <li class="card-project"></li>
+                    <li class="card-project">
                         <div class="image-project">
-                            <picture>
+                            <picture class="picture">
                                 <source srcset="./src/img/thumbnail-project-3-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-3-large.webp" alt="TODO WEB APP">
                             </picture>
-                            <a href="./">VIEW PROJECT</a>
-                            <a href="./">VIEW CODE</a>
+                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
+                            <a class="provisoriamente2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">TODO WEB APP</h3>
@@ -138,14 +138,14 @@
                         </ul>
                     </li>
 
-                    <li class="card-project"></li>
+                    <li class="card-project">
                         <div class="image-project">
-                            <picture>
+                            <picture class="picture">
                                 <source srcset="./src/img/thumbnail-project-4-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-4-large.webp" alt="ENTERTAINMENT WEB APP">
                             </picture>
-                            <a href="./">VIEW PROJECT</a>
-                            <a href="./">VIEW CODE</a>
+                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
+                            <a class="provisoriamente2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">ENTERTAINMENT WEB APP</h3>
@@ -156,14 +156,14 @@
                         </ul>
                     </li>
 
-                    <li class="card-project"></li>
+                    <li class="card-project">
                         <div class="image-project">
-                            <picture>
+                            <picture class="picture">
                                 <source srcset="./src/img/thumbnail-project-5-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-5-large.webp" alt="MEMORY GAME">
                             </picture>
-                            <a href="./">VIEW PROJECT</a>
-                            <a href="./">VIEW CODE</a>
+                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
+                            <a class="provisoriamente2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">MEMORY GAME</h3>
@@ -174,14 +174,14 @@
                         </ul>
                     </li>
 
-                    <li class="card-project"></li>
+                    <li class="card-project">
                         <div class="image-project">
-                            <picture>
+                            <picture class="picture">
                                 <source srcset="./src/img/thumbnail-project-6-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-6-large.webp" alt="ART GALLERY SHOWCASE">
                             </picture>
-                            <a href="./">VIEW PROJECT</a>
-                            <a href="./">VIEW CODE</a>
+                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
+                            <a class="provisoriamente2" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">ART GALLERY SHOWCASE</h3>
@@ -190,7 +190,9 @@
                             <li class="technologie">CSS</li>
                             <li class="technologie">JAVASCRIPT</li>
                         </ul>
-                    </li> -->
+                    </li>
+
+                    
                 </ul>
             </div>
         </section>
