Marquei quase todo o footer.

--- a/index.html
+++ b/index.html
@@ -198,5 +198,48 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container-footer">
+            <div class="content-footer">
+                <h2>Contact</h2>
+                <p>I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p>
+            </div>
+
+            <form>
+                <div>
+                    <input type="text" name="name" id="name" placeholder="NAME">
+                </div>
+    
+                <div>
+                    <input type="text" name="email-user" id="email-user" placeholder="EMAIL">
+                </div>
+    
+                <div>
+                    <textarea name="message" id="message" placeholder="message"></textarea>
+                </div>
+            </form>
+        </div>
+
+        <div class="final-rodape">
+            <h2>adamkeyes</h2>
+
+            <ul>
+                <li class="media">
+                    <a href="./"><img src="./src/img/icon-github.svg" alt="link GitHub"></a>
+                </li>
+                <li class="media">
+                    <a href="./"><img src="./src/img/icon-frontend-mentor.svg" alt="Link Frontend Mento"></a>
+                </li>
+                <li class="media">
+                    <a href="./"><img src="./src/img/icon-linkedin.svg" alt="Link LinkedIn"></a>
+                </li>
+                <li class="media">
+                    <a href="./"><img src="./src/img/icon-twitter.svg" alt="Link Twitter"></a>
+                </li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 </html>
