Começando o hover e active .projects

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                                 <source srcset="./src/img/thumbnail-project-1-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-1-large.webp" alt="DESIGN PORTFOLIO">
                             </picture>
-                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
-                            <a class="provisoriamente2" href="./">VIEW CODE</a>
+                            <a class="link-project" href="./">VIEW PROJECT</a>
+                            <a class="link-code" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">DESIGN PORTFOLIO</h3>
@@ -110,8 +110,8 @@
                                 <source srcset="./src/img/thumbnail-project-2-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-2-large.webp" alt="E-LEARNING LANDING PAGE">
                             </picture>
-                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
-                            <a class="provisoriamente2" href="./">VIEW CODE</a>
+                            <a class="link-project" href="./">VIEW PROJECT</a>
+                            <a class="link-code" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">E-LEARNING LANDING PAGE</h3>
@@ -127,8 +127,8 @@
                                 <source srcset="./src/img/thumbnail-project-3-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-3-large.webp" alt="TODO WEB APP">
                             </picture>
-                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
-                            <a class="provisoriamente2" href="./">VIEW CODE</a>
+                            <a class="link-project" href="./">VIEW PROJECT</a>
+                            <a class="link-code" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">TODO WEB APP</h3>
@@ -145,8 +145,8 @@
                                 <source srcset="./src/img/thumbnail-project-4-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-4-large.webp" alt="ENTERTAINMENT WEB APP">
                             </picture>
-                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
-                            <a class="provisoriamente2" href="./">VIEW CODE</a>
+                            <a class="link-project" href="./">VIEW PROJECT</a>
+                            <a class="link-code" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">ENTERTAINMENT WEB APP</h3>
@@ -163,8 +163,8 @@
                                 <source srcset="./src/img/thumbnail-project-5-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-5-large.webp" alt="MEMORY GAME">
                             </picture>
-                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
-                            <a class="provisoriamente2" href="./">VIEW CODE</a>
+                            <a class="link-project" href="./">VIEW PROJECT</a>
+                            <a class="link-code" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">MEMORY GAME</h3>
@@ -181,8 +181,8 @@
                                 <source srcset="./src/img/thumbnail-project-6-small.webp" media="(max-width: 768px)">
                                 <img src="./src/img/thumbnail-project-6-large.webp" alt="ART GALLERY SHOWCASE">
                             </picture>
-                            <a class="provisoriamente1" href="./">VIEW PROJECT</a>
-                            <a class="provisoriamente2" href="./">VIEW CODE</a>
+                            <a class="link-project" href="./">VIEW PROJECT</a>
+                            <a class="link-code" href="./">VIEW CODE</a>
 
                         </div>
                         <h3 class="project-title">ART GALLERY SHOWCASE</h3>
