--- a/index.html
+++ b/index.html
@@ -202,27 +202,30 @@
     <footer>
         <div class="container-footer">
             <div class="content-footer">
-                <h2>Contact</h2>
-                <p>I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p>
+                <h2 class="title-footer">Contact</h2>
+                <p class="description-footer">I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p>
             </div>
 
             <form id="formulay">
                 <div class="form-control">
-                    <input type="text" name="name" id="name" placeholder="NAME">
+                    <input type="text" name="name" id="name" placeholder="NAME" required>
                     <p class="error">!</p>
+                    <small class="error-message">Sorry, invalid format here</small>
                 </div>
                 
                 <div class="form-control">
-                    <input type="text" name="email-user" id="email-user" placeholder="EMAIL">
+                    <input type="text" name="email-user" id="email-user" placeholder="EMAIL" required>
                     <p class="error">!</p>
+                    <small class="error-message">Sorry, invalid format here</small>
                 </div>
                 
                 <div class="form-control">
-                    <textarea name="message" id="message" placeholder="message"></textarea>
+                    <textarea name="message" id="message" placeholder="message" required></textarea>
                     <p class="error">!</p>
+                    <small class="error-message">Sorry, invalid format here</small>
                 </div>
 
-                <button id="btn-form" type="submit"></button>
+                <button id="btn-form" type="submit">SEND MESSAGE</button>
             </form>
         </div>
 
